# Test

./: README  docker-compose.yml
backend/: Dockerfile  manage.py  pyproject.toml
backend/_docker/: celery-beat.sh  celery-workers.sh  entrypoint.sh
backend/app/: models.py  serializers.py  tasks.py  urls.py  views.py
backend/app/migrations/: 0001_initial.py
backend/cloudlinux/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
frontend/: README.md  package.json
frontend/src/: App.vue  main.js
frontend/src/components/: Choice.vue  Choices.vue  Question.vue  Questions.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js  questions.js
frontend/src/views/: QuestionsView.vue
